# rust-aws-wrapper

./: .rust-aws-wrapper.toml  Cargo.toml  Makefile
.kiro/specs/raw-logs/: .config.kiro  requirements.md
src/: aws.rs  aws_sso.rs  cli.rs  config.rs  constants.rs  custom_error.rs  location.rs  logger.rs  main.rs  zsh_command.rs
src/aws/: aws_cli.rs  aws_logs.rs  aws_pr.rs  aws_sso.rs  mod.rs
